c/examples/writing-a-c-compiler-tests/tests/chapter_18/invalid_parse/extra_credit/two_union_kws.c
union u {
    int a;
};

union union u x;  // can't use union keyword twice in a type specifier

int main(void) {
    return 0;
}